--- a/index.html
+++ b/index.html
@@ -128,11 +128,9 @@
                   <span class="sr-only">Toggle Dropdown</span>
                 </button>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item btn-sm" href="#" id="startAllBtn"><i class="fas fa-sync-alt" style="padding-right:5px;"></i>Start All</a>
-                  <a class="dropdown-item btn-sm" href="#">Another action</a>
-                  <a class="dropdown-item btn-sm" href="#">Something else here</a>
+                  <a class="dropdown-item btn-sm" href="#" id="new_instances_btn">New Instances</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item btn-sm" href="#">Separated link</a>
+                  <a class="dropdown-item btn-sm" href="#" id="new_inspect_btn">New Inspection</a>
                 </div>
               </div>
 
@@ -603,6 +601,42 @@
     </div>
   </div>
 </div>
+
+
+<div class="modal" tabindex="-1" role="dialog" id="new_inspection_window">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Create Inspection</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <!-- starts here -->
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="new_inspect_name_input_text">Name</span>
+                </div>
+                <input type="text" id="new_inspect_name_input" class="form-control" aria-label="Sizing example input" aria-describedby="new_inspect_name_input_text">
+              </div>
+
+              <div class="input-group mb-3 ui-front">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="new_inspect_route_input_text">Route</span>
+                  </div>
+                  <input type="text" id="new_inspect_route_input" class="form-control" aria-label="Sizing example input" aria-describedby="new_inspect_route_input_text">
+                </div>
+                            
+          <!-- ends here -->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" disabled id="new_inspect_add_btn" class="btn btn-primary">Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
         
 
     </main>
@@ -617,6 +651,7 @@
     <!-- Problem in bundlding, so we load jquery and bootstrap outside  -->
     <script type="text/javascript" src="libs/jquery-3.3.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://rawgit.com/abodelot/jquery.json-viewer/master/json-viewer/jquery.json-viewer.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="libs/system.js"></script>
